# SSML

./: .gitignore  README.md  core.py  default_config.ini  instance_lock.py  launcher.py  main.py  pyproject.toml  shortcut.py  style.qss  styles.qss  updater.py  utils.py  viewmodel.py
.github/workflows/: build.yml
ui/: __init__.py  helpers.py  main_window.py
ui/dialogs/: __init__.py  image_preview_dialog.py  settings_dialog.py  update_dialog.py
ui/widgets/: __init__.py  mod_tree_widget.py
viewmodels/: __init__.py  base.py  main_viewmodel.py  settings_viewmodel.py  workers.py
