[project]
name = "SSML"
version = "0.1.3.7-beta"
description = "Stella Sora Mod Launcher"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "psutil>=7.1.3",
    "rich>=13.5.2",
    "pystray>=0.19.5",
    "Pillow>=10.0.0",
    "pyside6>=6.10.1",
    "requests>=2.31.0",
    "pywin32>=306",
    "packaging>=23.0",
]

